# dummy_gazebo_ws

base_pkg/: CMakeLists.txt  package.xml
base_pkg/src/: base_gazebo.cpp
dummy_pkg/: CMakeLists.txt  package.xml
dummy_pkg/src/: dummy_gazebo.cpp
