<?xml version="1.0"?>
<package>
  <name>base_pkg</name>
  <version>0.0.0</version>
  <description>The base_pkg package</description>
  <maintainer email="dave@todo.todo">dave</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libgazebo7-dev</build_depend>
  <run_depend>gazebo7</run_depend>

</package>
