<?xml version="1.0"?>
<package>
  <name>dummy_pkg</name>
  <version>0.0.0</version>
  <description>The dummy_pkg package</description>
  <maintainer email="dave@todo.todo">dave</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>base_pkg</build_depend>
  <run_depend>base_pkg</run_depend>

</package>
